--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sheila-2",
-  "version": "0.1.0",
+  "name": "charlene-2.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
